# rTimelogger

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  UPGRADE-0.7-to-0.8.md  build.rs
.github/workflows/: aur.yml  ci.yml
res/: rtimelogger.rc
src/: cli.rs  commands.rs  db.rs  errors.rs  export.rs  lib.rs  main.rs
src/cli/: parser.rs
src/cli/commands/: add.rs  backup.rs  config.rs  db.rs  del.rs  export.rs  import.rs  init.rs  list.rs  log.rs  mod.rs
src/config/: migrate.rs  mod.rs
src/core/: add.rs  backup.rs  config.rs  del.rs  export.rs  log.rs  logic.rs  mod.rs
src/core/calculator/: expected.rs  gaps.rs  mod.rs  surplus.rs  timeline.rs
src/core/importer/: days.rs  mod.rs
src/db/: db_utils.rs  initialize.rs  log.rs  migrate.rs  mod.rs  models.rs  pool.rs  queries.rs  stats.rs
src/db/queries/: events.rs  import.rs  log.rs  mod.rs  pairs.rs
src/export/: csv.rs  excel_date.rs  fs_utils.rs  json.rs  json_csv.rs  logic.rs  mod.rs  model.rs  pdf.rs  pdf_export.rs  range.rs  xlsx.rs
src/import/: engine.rs  mod.rs  parser_csv.rs  parser_json.rs  types.rs
src/models/: day_summary.rs  event.rs  event_type.rs  events.rs  gap_type.rs  location.rs  mod.rs
src/ui/: messages.rs
src/utils/: colors.rs  date.rs  formatting.rs  mod.rs  path.rs  table.rs  time.rs
tests/: common.rs  export_extra_tests.rs  export_more_tests.rs  export_tests.rs  integration_tests.rs  missing_event_tests.rs  position_recompute_tests.rs  update_pair_tests.rs
