[package]
name = "rtimelogger"
version = "0.6.6"
edition = "2024"
authors = ["Umpire274 <umpire274@gmail.com>"]
description = "A simple cross-platform CLI tool to track working hours, lunch breaks, and calculate surplus time"
homepage = "https://github.com/umpire274/rTimelogger"
repository = "https://github.com/umpire274/rTimelogger"
license = "MIT"
readme = "README.md"
keywords = ["timelog", "work-tracking", "cli", "productivity", "sqlite"]
categories = ["command-line-utilities", "date-and-time", "database"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
predicates = "3.1.3"
assert_cmd = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.145"
zip = "6.0.0"
flate2 = "1.1.4"
tar = "0.4.44"
csv = "1.3.1"
rust_xlsxwriter = "0.90.2"
unicode-width = "0.2.2"
pdf-writer = "0.14.0"
