[package]
name = "rtimelogger"
version = "0.7.5"
edition = "2024"
authors = ["Umpire274 <umpire274@gmail.com>"]
description = "A simple cross-platform CLI tool to track working hours, lunch breaks, and calculate surplus time"
homepage = "https://github.com/umpire274/rTimelogger"
repository = "https://github.com/umpire274/rTimelogger"
license = "MIT"
readme = "README.md"
keywords = ["timelog", "work-tracking", "cli", "productivity", "sqlite"]
categories = ["command-line-utilities", "date-and-time", "database"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[build-dependencies]
winresource = "0.1.27"

[package.metadata.winresource]
OriginalFilename = "rtimelogger.exe"
FileDescription = "rTimelogger - Time Tracking Utility"
ProductName = "rTimelogger"
ProductVersion = "0.7.5"
LegalCopyright = "© 2025 Alessandro Maestri"
Icon = "res/rtimelogger.ico"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
predicates = "3.1.3"
assert_cmd = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.145"
zip = "6.0.0"
flate2 = "1.1.5"
tar = "0.4.44"
csv = "1.4.0"
rust_xlsxwriter = "0.92.1"
unicode-width = "0.2.2"
pdf-writer = "0.14.0"
